Add Tree of Life (#6)
* Add Tree of Life

* Add Tree of Life

* Fixes

* fix

* Update CommonEvents.java

* Fix some stuff

Co-authored-by: DaRealTurtyWurty <43997792+DaRealTurtyWurty@users.noreply.github.com>
Co-authored-by: Matyrobbrt <matyrobbrt@gmail.com>